# ipm

./: CMakeLists.txt  README.md  ipmConfig.cmake.in
cmake/: Findcppzmq.cmake  ipmConfig.cmake.in
include/ipm/: Direct.hpp  Publisher.hpp  Receiver.hpp  Sender.hpp  Subscriber.hpp  ZmqContext.hpp  ZmqPublisher.hpp  ZmqReceiver.hpp  ZmqSender.hpp  ZmqSubscriber.hpp  ipmReceiver.hpp  ipmSender.hpp
plugins/: ZmqPublisher.cpp  ZmqReceiver.cpp  ZmqReceiverImpl.hpp  ZmqSender.cpp  ZmqSenderImpl.hpp  ZmqSubscriber.cpp
schema/: generate.sh  ipm-singleprocess-job.json  ipm-singleprocess-job.jsonnet  ipm-singleprocess-pubsub-job.json  ipm-singleprocess-pubsub-job.jsonnet  ipm-viir-make.jsonnet  ipm-viir-schema.jsonnet  ipm-viis-make.jsonnet  ipm-viis-schema.jsonnet  ipm-viisu-schema.jsonnet  ipm-zmqpublisher-job.json  ipm-zmqpublisher-job.jsonnet  ipm-zmqreceiver-job.json  ipm-zmqreceiver-job.jsonnet  ipm-zmqsender-job.json  ipm-zmqsender-job.jsonnet  ipm-zmqsubscriber-job.json  ipm-zmqsubscriber-job.jsonnet
src/: Direct.cpp  IPMReceiverDAQModule.cpp.in  IPMSenderDAQModule.cpp.in  Publisher.cpp  Receiver.cpp  Sender.cpp  Subscriber.cpp  ZmqPublisher.cpp  ZmqReceiver.cpp  ZmqSender.cpp  ZmqSubscriber.cpp  dummy.cpp
test/: IPMReceiver_duneDAQModule.cpp  VectorIntIPMReceiverDAQModule.hpp  VectorIntIPMSenderDAQModule.hpp  simpleZmqPublisher.json  simpleZmqReceiver.json  simpleZmqSender.json  simpleZmqSubscriber.json  singleProcess.json
test/include/ipm/viir/: Nljs.hpp  Structs.hpp
test/include/ipm/viis/: Nljs.hpp  Structs.hpp
test/plugins/: IPMSender.cpp  VectorIntIPMPublisherDAQModule.cpp  VectorIntIPMPublisherDAQModule.hpp  VectorIntIPMReceiverDAQModule.cpp  VectorIntIPMReceiverDAQModule.hpp  VectorIntIPMSenderDAQModule.cpp  VectorIntIPMSenderDAQModule.hpp  VectorIntIPMSubscriberDAQModule.cpp  VectorIntIPMSubscriberDAQModule.hpp
test/src/ipm/viis/: Nljs.hpp  Structs.hpp
unittest/: Direct_test.cxx  Publisher_test.cxx  Receiver_test.cxx  Sender_test.cxx  Subscriber_test.cxx  ZmqPublisher_test.cxx  ZmqReceiver_test.cxx  ZmqSender_test.cxx  ZmqSubscriber_test.cxx  ipmReceiver_test.cxx  ipmSender_test.cxx
